Add section 1 (not finished)
masih kurang beberapa hal seperti:
- gambar lampu terang terang,
- gambar wave,
- adjust padding and margin agar sama seperti desain.

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,18 @@
     </nav>
 
     <section class="section1">
-
+        <div class="sec1_konten">
+            <h1 class="sec1_title">Lorem Ipsum is <span>simply dummy</span> text of the printing and typesetting industry.</h1>
+            <p class="sec1_deskripsi">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            
+            <div class="sec1_button">
+                <a href="/pages/contactus.html"><button class="sec1_contactus">Contact Us</button></a>
+                <button class="sec1_viewmore">View more</button>
+            </div>
+        </div>
+        <img src="/image/landing_sec1_image.svg" class="sec1_image">
     </section>
 </body>
 </html>
