--- a/pages/index.html
+++ b/pages/index.html
@@ -116,7 +116,7 @@
         </div>
 
         <!-- Hasil Estimasi -->
-        <div id="estimated-date-container" class="estimated-date-container"></div>
+        <div id="estimated-date-container" class="estimated-date-container hidden"></div>
     </section>
   
 
