--- a/pages/signup.html
+++ b/pages/signup.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/css/signup.css">
 </head>
 <body>
-    <div class="container-signup">
-    <img src="/image/signup_logo.svg" alt="">
-    <h1 style="color: #1090cb; font-size: 60px;">PROMIL</h1>
+     <div class="container-signup">
+        <img src="/image/signup_logo.svg" alt="">
+        <h1 style="color: #1090cb; font-size: 60px;">PROMIL</h1>
 
 <div>
     <p>Email</p> 
@@ -26,7 +26,8 @@
     <input type="text" class="input-signup">
 
    </div>
-   <div>
+   <div style="display: flex; flex-direction: row; align-items: center; 
+   margin-top: 150px;">
     <a href="/pages/reset.html" class="button-reset">Reset</a>
 
     <a href="/pages/submit.html" class="button-submit">Submit</a>
