add cek akun on login
- Add local user data
- Cek apakah user data ada di database atau tidak

--- a/pages/login.html
+++ b/pages/login.html
@@ -26,21 +26,21 @@
                 <div class="container-email">
                     <p class="email-text">Email Address</p>
                     <div class="container-input">
-                        <img src="/image/login_email.svg" >
+                        <img src="/image/login_email.svg">
                         <input id="email-input" type="text" placeholder="Enter your email address">
                     </div>
-                </div>          
+                </div>
                 <div class="container-email">
                     <p class="email-text">Password</p>
                     <div class="container-input">
                         <img src="/image/login_password.svg">
-                        <input id="password-input" type="text" placeholder="Enter your password" style="transform: translateX(11px)">
+                        <input id="password-input" type="password" placeholder="Enter your password" style="transform: translateX(11px)">
                     </div>
                 </div>
             </form>
-
+            
             <a href="/pages/forgotpassword.html" class="forget-password">Forget Password ?</a>
-
+            
             <p id="error-message" style="color: red; text-align: center; font-size: 16px;"></p>
             <button id="login-button" class="button-login">Login</button>
 
