--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
         <!-- Logo dan Judul -->
         <div class="nav-flex-judul">
             <img src="/image/landing_logo.svg" style="width: 92px; height: 92px;">
-            <h1 style="color: #1090CB; font-size: 29px; font-style: poppins ;">PROMIL</h1>
+            <h1 style="color: #1090CB; font-size: 29px;">PROMIL</h1>
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
