--- a/pages/symptomadvice.html
+++ b/pages/symptomadvice.html
@@ -16,7 +16,7 @@
             <!-- Logo dan Judul -->
         <div class="nav-flex-judul">
             <img src="/image/logo_official.svg" style="width: 92px; height: 92px;">
-            <h1  style="color: #1090CB; font-size: 29px;">PROMIL</h1>
+            <h1  style="color: #1090CB; font-size: 29px; font-family: 'poppins-bold', sans-serif !important;">PROMIL</h1>
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
@@ -34,32 +34,45 @@
 <!--container judul-->
     <div class="judul-symptom">
         <div class="container-judul">
-             <h1 style=" color: black; font-size: 64px;">Symptom and Advice</h1>
-            <img src="/image/foto_bumil.svg" style="width: 795px; height: 486px; margin: 0 auto; transform: translateY(100px);">
+             <h1 style=" color: #1090CB; font-size: 90px; margin-top: 18px;">Symptom & Advice</h1>
+             <img src="/image/Star 1.svg" style="height: 66.19px; width: 66.88px; position: absolute; right: 549px; top: 219px;">
 
          </div>
        
      </div>
 
+
+<!--container gambar-->
+<div class="container-gambar">
+    <img src="/image/foto_bumil.svg" style="width: 573px; height: 569px; margin-left: 200px; margin-top: auto; transform: translateY(100px); margin-bottom: 11px;">
+    <img src="/image/symptom advice2.svg" style="width: 389px; height: 414px; margin-left: 217px; margin-top: 111px;">
+    <img src="/image/vector S.svg" style="height: 531px; width: 475px; position: absolute; top: 199px; bottom: 2999px; left: 1px;">
+</div>
+
+
+
 <!--container materi-->
 <div class="container-materi">
     <div class="isi-materi">
-        <h1 style="color: black; font-size: 32px;">1. Swollen breasts</h1>
-        <h2 style="color: black; font-size: 18px;">To overcome this, wear a bra that fits properly to reduce discomfort. Before buying a bra, it's a good idea for you to try it on first so you can get a bra that is the right size.</h2>
-        <h1 style="color: black; font-size: 32px;">2. Nausea</h1>
-        <h2 style="color: black; font-size: 18px;">"Most women who experience nausea and vomiting in the first trimester will go on to have a normal and healthy pregnancy," said obstetrician Stanley M. Berry, MD, quoted from WebM,
-            extreme nausea and vomiting can be dangerous, Bun. This can cause weight loss, dizziness, dehydration, and electrolyte imbalance.This can be overcome by eating bland foods in the morning. Then, consume protein snacks to prevent hunger which can cause nausea. 
-            Vitamin B6 and ginger products are also very helpful in reducing these symptoms.</h2>
-        <h1 style="color: black; font-size: 32px;">3. Frequent urination</h1>
-        <h2 style="color: black; font-size: 18px;">This urination problem can be overcome by exercising the perineal muscles, such as Kegel exercises. To learn about this, you can ask your doctor.</h2>
-        <h1 style="color: black; font-size: 32px;">4. Constipation </h1>
-        <h2 style="color: black; font-size: 18px;">To overcome this, mothers need to drink lots of fluids, get enough exercise, and eat foods high in fiber. Take special vitamins for pregnant women that contain iron and vitamin C. Vitamin C will increase iron absorption.</h2>
-        <h1 style="color: black; font-size: 32px;">5. Fatigue</h1>
-        <h2 style="color: black; font-size: 18px;">Fatigue is a common thing experienced by young pregnant women. Your body needs rest after a day of activities. Fatigue can be anticipated by taking a short nap during the day, brisk walking, and stretching. 
-            Mothers also need to consume protein-packed snacks to restore energy.</h2>
-        </div>
+        <h1 style="color: #1090CB; font-size: 50px;">Swollen breasts</h1>
+        <h2 style="color: black; font-size: 28px;">Kadar hormon meningkat, aliran darah dan retensi cairan juga meningkat menyebabkan payudara terasa bengkak, sakit, dan sensitif terhadap sentuhan. Untuk mengatasinya, kenakan bra yang ukurannya pas untuk mengurangi rasa tidak nyaman.</h2>
+        <h1 style="color: #1090CB; font-size: 50px; text-align: right;">Nausea</h1>
+        <h2 style="color: black; font-size: 28px;">Mual dan muntah yang berlebihan bisa berbahaya, Bun. Hal ini dapat menyebabkan penurunan berat badan, pusing, dehidrasi, dan ketidakseimbangan elektrolit. Hal ini bisa diatasi dengan mengonsumsi makanan hambar di pagi hari. Kemudian, konsumsilah camilan berprotein untuk mencegah rasa lapar yang dapat menyebabkan mual. Vitamin B6 dan produk jahe juga sangat membantu mengurangi gejala tersebut.</h2>
+        <h1 style="color: #1090CB; font-size: 50px; text-align: left;">Frequent urination</h1>
+        <h2 style="color: black; font-size: 28px;">Peningkatan buang air kecil saat hamil dapat disebabkan oleh perubahan hormonal, peningkatan cairan, dan meningkatnya tekanan rahim pada kandung kemih. Masalah buang air kecil ini bisa diatasi dengan melatih otot perineum, seperti senam kegel.</h2>
+        <h1 style="color: #1090CB; font-size: 50px; text-align: right;">Constipation </h1>
+        <h2 style="color: black; font-size: 28px;">Gejalanya adalah nyeri saat buang air besar dan buang air besar yang keras dan sulit dikeluarkan. Untuk mengatasinya, ibu perlu banyak minum cairan, cukup berolahraga, dan mengonsumsi makanan tinggi serat. Konsumsi vitamin khusus ibu hamil yang mengandung zat besi dan vitamin C. Vitamin C akan meningkatkan penyerapan zat besi.</h2>
+        <h1 style="color: #1090CB; font-size: 50px; text-align: left;">Fatigue</h1>
+        <h2 style="color: black; font-size: 28px;">Kelelahan merupakan hal yang lumrah dialami oleh ibu hamil muda. Tubuh Anda memerlukan istirahat setelah seharian beraktivitas. Kelelahan dapat diantisipasi dengan tidur siang sebentar, jalan cepat, dan peregangan. Ibu juga perlu mengonsumsi camilan berprotein untuk memulihkan energi.</h2>
+        <img src="/image/Vector s2.svg" style="height: 320.79px; width: 456.8; position: absolute; top: 1700px; right: 10px;">
+    </div>
+
+
+   </div>
 
 </div>
+
+
 
 <!-- Footer -->
 <footer>
