Nambah penjelasan warna background

--- a/pages/symptomadvice.html
+++ b/pages/symptomadvice.html
@@ -49,6 +49,7 @@
     </div>
 
     <!-- Swollen Breast -->
+    <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi">
             <img src="/image/symptom_swollenbreast.svg" alt="">
@@ -64,6 +65,7 @@
     </section>
 
     <!-- Nausea -->
+    <!-- BACKGROUNDNYA BIRU -->
     <section style="background-color: #d3e9f3;">
         <div class="container-materi">
             <div style="text-align: right;">
@@ -80,6 +82,7 @@
     </section>
 
     <!-- Frequent Urination -->
+    <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
             <img src="/image/symptom_urination.svg" alt="">
@@ -94,6 +97,7 @@
     </section>
 
     <!-- Constipation -->
+    <!-- BACKGROUNDNYA BIRU -->
     <section style="background-color: #d3e9f3;">
         <div class="container-materi" style="gap: 30px;">
             <div style="text-align: right;">
@@ -108,6 +112,7 @@
     </section>
 
     <!-- Fatigue -->
+    <!-- BACKGROUNDNYA PUTIH -->
     <section>
         <div class="container-materi" style="gap: 10px;">
             <img src="/image/symptom_fatigue.svg" alt="">
