add navigation on index to symptomadvice

--- a/pages/index.html
+++ b/pages/index.html
@@ -78,7 +78,7 @@
             
             <div style="display: flex; flex-direction: column;">
                 <!-- Symptom & Advicee -->
-                <a href="/pages/symptom.html"> 
+                <a href="/pages/symptomadvice.html"> 
                     <img src="/image/landing_sec2_fitur_symptom.svg" alt="">
                     <div class="sec2-fitur-konten">
                         <h1 style="font-size: 25px; transform: translateY(7px);">Symptom & Advice</h1>
