--- a/pages/symptomadvice.html
+++ b/pages/symptomadvice.html
@@ -20,9 +20,9 @@
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
-                <a href="/pages/index.html">Home</a>
-                <a href="/pages/aboutus.html">About us</a>
-                <a href="/pages/services.html">Services</a>
+                <a href="/pages/index.html" style="font-family: 'poppins-bold', sans-serif !important;">Home</a>
+                <a href="/pages/aboutus.html" style="font-family: 'poppins-bold', sans-serif !important;">About us</a>
+                <a href="/pages/services.html" style="color: #1090CB; font-family: 'poppins-bold', sans-serif !important;">Services</a>
             </div>
         </div>
             <!-- Login and Search -->
