--- a/pages/stageofpregnancy.html
+++ b/pages/stageofpregnancy.html
@@ -35,7 +35,8 @@
     <div class="judul-symptom">
         <div class="container-judul">
              <h1 style=" color: #1090CB; font-size: 90px; margin-top: 18px; margin-bottom: 9999px;">Stage of Pregnancy</h1>
-             <img src="/image/Star 1.svg" style="height: 66.19px; width: 66.88px; position: absolute; right: 576px; top: 219px;">
+             <img src="/image/symptom_Star 1.svg" style="width: 68px; height: 67px; position: absolute; bottom: 121px; right: 11px;">
+             
 
          </div>  
     </div>      
@@ -72,42 +73,7 @@
                 <img src="/image/TS33.svg"style="width: 1914px; height: 299px; position: absolute; left: 25px; top: 2500px;">
 </div>
 
-<!-- Footer -->
-<footer>
-    <div class="footer-konten">
-        <!-- Promil -->
-        <div>
-            <h1 style="color: #00329B;">Promil</h1>
-            <p style="padding-top: 15px; width: 372px;">PROMIL helps provide information related to pregnancy.</p>
-            <p style="margin-top: 36px;"">@promil.idn</p>
-        </div>
-        <!-- About us -->
-        <div style="margin-left: 78px;"">
-            <h1>About us</h1>
-            <p style="padding-top: 15px;">PROMIL</p>
-            <p style="transform: translateY(-10px);">Portofolio</p>
-            <p style="transform: translateY(-20px);">Careers</p>
-            <p style="transform: translateY(-30px);">Contact us</p>
-        </div>
-        <!-- Contact us -->
-        <div style="margin-left: 143px;">
-            <h1>Contact us</h1>
-            <p style="padding-top: 15px; width: 282px;">Jl. Sidoluhur No. 10 Baciro Gondokusuman Yogyakarta</p>
-            <p style="padding-top: 20px;"">+62 857 4374 8914</p>
-        </div>
-        <!-- Sosial Media -->
-        <div style="margin-top:115px;">
-            <img src="/image/landing_footer_facebook.svg" alt="">
-            <img src="/image/landing_footer_instagram.svg" alt="">
-            <img src="/image/landing_footer_twitter.svg" alt="">
-            <img src="/image/landing_footer_linkedin.svg" alt="">
-        </div>
-    </div>
 
-    <div style="border-bottom: 1px solid #D2D2D2; width: 100%; margin-top:50px;"></div>
-    <p style="font-size: 13px; color: #686868; margin-top: 29px;">Copyright ® 2021 Lorem All rights Rcerved</p>
-     
-</footer>
 
 
 
