--- a/pages/symptomadvice.html
+++ b/pages/symptomadvice.html
@@ -22,10 +22,10 @@
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
-                <a href="/pages/index.html">Home</a>
-                <a href="/pages/aboutus.html">About us</a>
-                <a href="/pages/services.html">Services</a>
-            </div>  
+                <a href="/pages/index.html" style="font-family: 'poppins-bold', sans-serif !important;">Home</a>
+                <a href="/pages/aboutus.html" style="font-family: 'poppins-bold', sans-serif !important;">About us</a>
+                <a href="/pages/services.html" style="color: #1090CB; font-family: 'poppins-bold', sans-serif !important;">Services</a>
+            </div>
         </div>
         <!-- Login dan Search-->
         <div class="nav-flex-log">
@@ -133,10 +133,10 @@
             <div>
                 <h1 style="color: #00329B;">Promil</h1>
                 <p style="padding-top: 15px; width: 372px;">PROMIL helps provide information related to pregnancy.</p>
-                <p style="margin-top: 36px;"">@promil.idn</p>
+                <p style="margin-top: 36px;">@promil.idn</p>
             </div>
             <!-- About us -->
-            <div style="margin-left: 78px;"">
+            <div style="margin-left: 78px;">
                 <h1>About us</h1>
                 <p style="padding-top: 15px;">PROMIL</p>
                 <p style="transform: translateY(-10px);">Portofolio</p>
@@ -147,7 +147,7 @@
             <div style="margin-left: 143px;">
                 <h1>Contact us</h1>
                 <p style="padding-top: 15px; width: 282px;">Jl. Sidoluhur No. 10 Baciro Gondokusuman Yogyakarta</p>
-                <p style="padding-top: 20px;"">+62 857 4374 8914</p>
+                <p style="padding-top: 20px;">+62 857 4374 8914</p>
             </div>
             <!-- Sosial Media -->
             <div style="margin-top:115px;">
