--- a/pages/index.html
+++ b/pages/index.html
@@ -54,7 +54,7 @@
         <div class="sec2-fitur">
             <div style="display: flex; flex-direction: column;">
                 <!-- Stage of Pregnancy -->
-                <a href="/pages/stagepreg.html">
+                <a href="/pages/stageofpregnancy.html">
                     <img src="/image/landing_sec2_fitur_stage.svg" alt="">
                     <div class="sec2-fitur-konten">
                         <h1 style="font-size: 25px; transform: translateY(7px);">Stage of Pregnancy</h1>
@@ -143,7 +143,7 @@
                 <p style="padding-top: 20px;"">+62 857 4374 8914</p>
             </div>
             <!-- Sosial Media -->
-            <div style="margin-top:115px;">
+            <div class="footer-sosmed">
                 <img src="/image/landing_footer_facebook.svg" alt="">
                 <img src="/image/landing_footer_instagram.svg" alt="">
                 <img src="/image/landing_footer_twitter.svg" alt="">
