--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/signup.css">
 </head>
-<body style="position: relative;">
+<body style="position: relative; overflow: hidden;">
     <img src="/image/login_vectorbiru.svg" class="vector-biru">
     <img src="/image/login_vectorhijau.svg" class="vector-hijau">
     <h1 style="text-align: center; font-size: 50px;">Welcome back!</h1>
