Update css link for aboutus

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -9,8 +9,8 @@
   <meta name="author" content="promil">
   <title>Promil</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
-  <link rel="stylesheet" href="./assets/css/plugins.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/css/plugins.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="preload" href="./assets/css/fonts/dm.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
