Update on index

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,6 @@
             <!-- Button -->
             <div class="sec1-button">
                 <a href="/pages/contactus.html"><button class="sec1-contactus">Contact Us</button></a>
-                <button class="sec1-viewmore">View more</button>
             </div>
         </div>
         <img src="/image/landing_sec1_image.svg" class="sec1-image">
@@ -109,7 +108,7 @@
         <div class="sec3-konten">
           <div class="sec3-input">
             <img src="/image/landing_sec3_date.svg" style="width: 38px; height: 39px;" id="date-picker-button">
-            <input type="text" placeholder="Select a Date" id="selected-date-input" readonly data-input style="margin-left: 15px; margin-top: 3px; ">
+            <input type="text" placeholder="Enter your First Day of Last Menstruation" id="selected-date-input" readonly data-input style="margin-left: 15px; margin-top: 3px; ">
           </div>
           <button id="calculate-button">Calculate</button>
         </div>
