Add vector to index html

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
-<body>
+<body style="overflow-x: hidden;">
     <!-- Navbar -->
     <nav class="navbar">
         <!-- Logo dan Judul -->
@@ -44,6 +44,10 @@
             </div>
         </div>
         <img src="/image/landing_sec1_image.svg" class="sec1-image">
+        <!-- Vector -->
+        <img src="/image/landing_sec1_imageelips.svg" class="sec1-imageelips">
+        <img src="/image/landing_vectorbiru.svg" class="sec1-imageelips" style="right:0; transform:translateY(87px); z-index: 0;"">
+        <img src="/image/landing_vectorhijau.svg" class="sec1-imageelips" style="transform:translateY(220px); z-index: 0;">
     </section>
 
     <!-- Section 2 -->
@@ -98,11 +102,16 @@
                     </div>
                 </a>
             </div>
+            <!-- Vector Pot -->
+            <img src="/image/landing_vectorpot.svg" class="sec2-vector-pot">
         </div>
     </section>
 
     <!-- Section 3 -->
     <section class="section3">
+        <!-- Vector bintang -->
+        <img src="/image/symptom_Star 1.svg" class="sec3-star">
+        <img src="/image/landing_vectorpie.svg" class="sec3-pie">
         <h1 style="font-size: 30px; width: 525px; text-align: center;">Get to Know Your Estimated Date of Birth for Your Baby!</h1>
         <!-- Input and Submit -->
         <div class="sec3-konten">
