--- a/pages/login.html
+++ b/pages/login.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/signup.css">
 </head>
 <body style="position: relative; overflow-x: hidden;">
+    <a href="/pages/index.html"><button class="login-navigation">Back</button></a>
+
     <img src="/image/login_vectorbiru.svg" class="vector-biru">
     <img src="/image/login_vectorhijau.svg" class="vector-hijau">
     <h1 style="text-align: center; font-size: 50px;">Welcome back!</h1>
