Add navigation Navbar
- Active state
- Jika di index maka home biru,
- Jika di aboutus maka aboutus biru,
- Jika selain diatas maka service biru.

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <title>PROMIL</title>
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body style="overflow-x: hidden;">
@@ -18,9 +19,9 @@
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
-                <a href="/pages/index.html">Home</a>
-                <a href="/pages/aboutus.html">About us</a>
-                <a href="/pages/services.html">Services</a>
+                <a href="/pages/index.html" id="home-link">Home</a>
+                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
@@ -164,6 +165,7 @@
          
     </footer>
 
+    <script src="/javascript/navigationNavbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="/javascript/calculateBirth.js"></script>
 </body>
