--- a/pages/stageofpregnancy.html
+++ b/pages/stageofpregnancy.html
@@ -20,9 +20,9 @@
             <div class="vertical-line"></div>
             <!-- Atribut -->
             <div class="nav-flex-atribut">
-                <a href="/pages/index.html">Home</a>
-                <a href="/pages/aboutus.html">About us</a>
-                <a href="/pages/services.html">Services</a>
+                <a href="/pages/index.html" id="home-link">Home</a>
+                <a href="/pages/aboutus.html" id="about-link">About us</a>
+                <a href="/pages/services.html" id="services-link">Services</a>
             </div>  
         </div>
         <!-- Login dan Search-->
@@ -109,5 +109,7 @@
         <p style="font-size: 13px; color: #686868; margin-top: 29px;">Copyright ® 2021 Lorem All rights Rcerved</p>
         
     </footer>
+
+    <script src="/javascript/navigationNavbar.js"></script>
 </body>
 </html>
