Update signup style and validation
- Style sesuai seperti figma,
- Validasi tambah untuk username, format hanya boleh huruf dan angka

--- a/pages/login.html
+++ b/pages/login.html
@@ -52,8 +52,10 @@
             <!-- Popup Signup -->
             <div class="popup" id="popup">
                 <div class="container-signup">
-                    <img src="/image/signup_logo.svg" style="width: 169px; height: 151px;">
-                    <h1 style="color: #1090cb; font-size: 55px;">PROMIL</h1>
+                    <div class="container-logo">
+                        <img src="/image/landing_logo.svg" style="width: 135px; height: 87px;">
+                        <h1 style="color: #1090cb; font-size: 55px;">PROMIL</h1>
+                    </div>
                     
                     <!-- Input Data -->
                     <form action="" class="form-signup" id="signup-form">
