--- a/pages/stageofpregnancy.html
+++ b/pages/stageofpregnancy.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- TRISEMESTER 3 -->
-    <h1 class="materi-judul">Trisemester Pertama</h1>
+    <h1 class="materi-judul">Trisemester Ketiga</h1>
     <div class="container-trisemester">
         <img src="/image/TS3.svg" alt="">
         <p> 
