Fix style on login

--- a/pages/login.html
+++ b/pages/login.html
@@ -17,6 +17,7 @@
     <p style="text-align: center; font-size: 30px;">Log in now, to continue</p>
 
     <div class="container">
+        <!-- Image -->
         <div class="container-image">
             <img src="/image/login_image1.svg" class="image1">
             <img src="/image/login_image2.svg" class="image2">    
@@ -25,6 +26,7 @@
         <div class="container-form">
             <h1 style="font-size: 50px; color: #1090CB;">PROMIL</h1>
             <form id="login-form" action="" style="transform: translateY(-45px);">
+                <!-- Input Email -->
                 <div class="container-email">
                     <p class="email-text">Email Address</p>
                     <div class="container-input">
@@ -32,6 +34,7 @@
                         <input id="email-input" type="text" placeholder="Enter your email address">
                     </div>
                 </div>
+                <!-- Input Password -->
                 <div class="container-email">
                     <p class="email-text">Password</p>
                     <div class="container-input">
@@ -41,7 +44,7 @@
                 </div>
             </form>
             
-            <a href="/pages/forgotpassword.html" class="forget-password">Forget Password ?</a>
+            <a href="#" class="forget-password">Forget Password ?</a>
             
             <p id="error-message" style="color: red; text-align: center; font-size: 16px;"></p>
             <button id="login-button" class="button-login">Login</button>
