--- a/pages/index.html
+++ b/pages/index.html
@@ -126,10 +126,10 @@
             <div>
                 <h1 style="color: #00329B;">Promil</h1>
                 <p style="padding-top: 15px; width: 372px;">PROMIL helps provide information related to pregnancy.</p>
-                <p style="margin-top: 36px;"">@promil.idn</p>
+                <p style="margin-top: 36px;">@promil.idn</p>
             </div>
             <!-- About us -->
-            <div style="margin-left: 78px;"">
+            <div style="margin-left: 78px;">
                 <h1>About us</h1>
                 <p style="padding-top: 15px;">PROMIL</p>
                 <p style="transform: translateY(-10px);">Portofolio</p>
@@ -140,7 +140,7 @@
             <div style="margin-left: 143px;">
                 <h1>Contact us</h1>
                 <p style="padding-top: 15px; width: 282px;">Jl. Sidoluhur No. 10 Baciro Gondokusuman Yogyakarta</p>
-                <p style="padding-top: 20px;"">+62 857 4374 8914</p>
+                <p style="padding-top: 20px;">+62 857 4374 8914</p>
             </div>
             <!-- Sosial Media -->
             <div style="margin-top:115px;">
